Внутри article заменены <p> на <h2>

--- a/index.html
+++ b/index.html
@@ -170,25 +170,25 @@
   </div>
   <div class="container-hit">
     <article class="hit 1-hit">
-      <p class="hit-name">ХИТ</p>
+      <h2 class="hit-name">ХИТ</h2>
       <div class="hit-image hit-image-1"></div>
       <p class="hit-cost">310 &#8381;/кг</p>
       <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
     </article>
     <article class="hit 2-hit">
-      <p class="hit-name">ХИТ</p>
+      <h2 class="hit-name">ХИТ</h2>
       <div class="hit-image hit-image-2"></div>
       <p class="hit-cost">380 &#8381;/кг</p>
       <a href="#">Сливочно-кофейное с кусочками шоколада</a>
     </article>
     <article class="hit 3-hit">
-      <p class="hit-name">ХИТ</p>
+      <h2 class="hit-name">ХИТ</h2>
       <div class="hit-image hit-image-3"></div>
       <p class="hit-cost">355 &#8381;/кг</p>
       <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
     </article>
     <article class="hit 4-hit">
-      <p class="hit-name">ХИТ</p>
+      <h2 class="hit-name">ХИТ</h2>
       <div class="hit-image hit-image-4"></div>
       <p class="hit-cost">415 &#8381;/кг</p>
       <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
