Выполнено задание по 3 вебинару.
Создан css-файл.
Импортированы изображения из макетов.
Добавлен стили и изображения в разметку.

--- a/gllacy-catalog.html
+++ b/gllacy-catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-heider"> <!--В отличии от страницы barbershop-item сделал логотип и меню в разных блоках, так как логотп существено крупней меню. Целесообразно это?-->
       <div class="logo"><!--Учтено--><!-- Добавить класс .logo -->
       <a href="index.html">
-       <img src="http://placehold.it/150x100" width="150" height="100" alt="Gllacy Shop">
+       <img src="img/gllacy-logo.svg" width="150" height="100" alt="Gllacy Shop">
       </a>
       </div>
       <div class="heider-container"> 
@@ -199,7 +200,7 @@
       <div class="goods-image">
         <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
         <p class="good-cost">310
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+          <img src="img/gllacy-catalog/goods-1.png" width="150" height="100" alt="Символ рубля">/кг
         </p><!--Учтено--><!-- Иконку рубля добавим картинкой. Этот блок должен лежать внутри блока с картинкой-->
       </div><!--Учтено--><!-- Внутрь вставить img. good-image-1 - не нужен класс -->
         <p class="goods-name">
@@ -209,7 +210,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-2.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">380
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -221,7 +222,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-3.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">355
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -233,7 +234,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-4.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">415
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -245,7 +246,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-5.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">325
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -257,7 +258,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-6.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">410
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -269,7 +270,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-7.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">375
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -281,7 +282,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-8.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">320
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -293,7 +294,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-9.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">440
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -305,7 +306,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-10.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">435
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -317,7 +318,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-11.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">355
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
@@ -329,7 +330,7 @@
     </article>
     <article class="goods">
       <div class="good-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+        <img src="img/gllacy-catalog/goods-12.png" width="150" height="100" alt="Мороженое">
         <p class="good-cost">420
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
         </p>
