--- a/gllacy-index.html
+++ b/gllacy-index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <!-- На этой странице структура немного изменится, покажут на вебинаре, когда будут разбирать слайдер -->
     <header class="main-heider"> <!--В отличии от страницы barbershop-item сделал логотип и меню в разных блоках, так как логотп существено крупней меню. Целесообразно это?-->
       <div>
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Gllacy Shop">
+        <img src="img/gllacy-logo.svg" width="150" height="100" alt="Gllacy Shop">
       </div>
       <div class="heider-container"><!--Учтено--><!-- Смотри замечания на страницие gllacy-catalog.html -->
         <nav class="heider-navigation">
@@ -125,7 +126,7 @@
       <div class="container-hit">
         <article class="hit"><!--Учтено--><!-- Класс 1-hit, 2-hit и так далее не нужны -->
           <div class="hit-image hit-image-1">
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+            <img src="img/gllacy-index/container-hit-1.png" width="150" height="100" alt="Мороженое">
             <span class="hit-name">ХИТ</span><!--Учтено--><!-- span-->
           </div><!--Учтено--><!-- Добавить img и перенести сюда хит -->
           <p class="hit-cost">310
@@ -138,7 +139,7 @@
         </article>
         <article class="hit">
           <div class="hit-image hit-image-2">
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+            <img src="img/gllacy-index/container-hit-2.png" width="150" height="100" alt="Мороженое">
             <span class="hit-name">ХИТ</span>  
           </div>
           <p class="hit-cost">380
@@ -150,7 +151,7 @@
         </article>
         <article class="hit">
           <div class="hit-image hit-image-3">
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+            <img src="img/gllacy-index/container-hit-3.png" width="150" height="100" alt="Мороженое">
             <span class="hit-name">ХИТ</span>  
           </div>
           <p class="hit-cost">355
@@ -162,7 +163,7 @@
         </article>
         <article class="hit">
           <div class="hit-image hit-image-4">
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
+            <img src="img/gllacy-index/container-hit-4.png" width="150" height="100" alt="Мороженое">
             <span class="hit-name">ХИТ</span>  
           </div>
           <p class="hit-cost">415
