Выполнено задание по вебинару №4
Я сначала придавал большое внимание деталям, но потом стал делать только
крупноблочную верстку как того и требовало задание.

--- a/gllacy-index.html
+++ b/gllacy-index.html
@@ -7,20 +7,19 @@
   </head>
   <body>
     <!-- На этой странице структура немного изменится, покажут на вебинаре, когда будут разбирать слайдер -->
-    <header class="main-heider"> <!--В отличии от страницы barbershop-item сделал логотип и меню в разных блоках, так как логотп существено крупней меню. Целесообразно это?-->
-      <div>
-        <img src="img/gllacy-logo.svg" width="150" height="100" alt="Gllacy Shop">
+    <header class="main-heider clearfix"> <!--В отличии от страницы barbershop-item сделал логотип и меню в разных блоках, так как логотп существено крупней меню. Целесообразно это?-->
+      <div class="heider-logo">
+        <img src="img/gllacy-logo.svg" width="154" height="64" alt="Gllacy Shop">
       </div>
-      <div class="heider-container"><!--Учтено--><!-- Смотри замечания на страницие gllacy-catalog.html -->
+    <!--Учтено--><!-- Смотри замечания на страницие gllacy-catalog.html -->
         <nav class="heider-navigation">
           <ul class="top-ul">
             <li class="heider-catalog top-li-item">
               <a href="#" class="top-link">Каталог</a>
-              <ul class="catalog-sub-menu">
+              <ul class="heider-sub-menu">
                 <li class="second-li-item">
                   <a href="#" class="second-link">Новинки</a>
                 </li>
-                <li class="sub-menu-line"></li>
                 <li class="second-li-item">
                   <a href="#" class="second-link">Сливочное</a>
                 </li>
@@ -43,10 +42,8 @@
             </li>
           </ul>
         </nav>
-      </div>
-      <div class="heider-right">
         <div class="heider-user-block">
-        <ul>
+        <ul class="user-block-ul">
           <li class="heider-search">
             <form action="#" method="get" class="heider-search-block">
               <input type="text" name="search" placeholder="Что ищем?">
@@ -54,36 +51,35 @@
           </li>
           <li class="heaider-enter">
             <p class="text-enter">Вход</p>
-              <div class="heider-enter-block">
-                <form action="#" method="post">
-                  <input type="text" name="email" placeholder="Электронная почта">
-                  <input type="password" name="password" placeholder="Пароль">
-                  <input type="submit" name="enter" value="Войти">            
-                </form>
-                <ul>
-                  <li>
-                    <a href="#" class="forget-password">Забыли пароль?</a>  
-                  </li>
-                  <li>
-                    <a href="#" class="log-in">Новая регистрация</a>  
+            <div class="heider-enter-block">
+              <form action="#" method="post">
+                <input type="text" name="email" placeholder="Электронная почта">
+                <input type="password" name="password" placeholder="Пароль">
+                <input type="submit" name="enter" value="Войти">        
+              </form>
+              <ul>
+                <li>
+                  <a href="#" class="forget-password">Забыли пароль?</a>  
+                </li>
+                <li>
+                  <a href="#" class="log-in">Новая регистрация</a>  
                   </li>
                 </ul>
               </div>
           </li>
           <li> 
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Корзина" class="heider-basket-img">
+            <img src="http://placehold.it/150x100" width="32" height="32" alt="Корзина" class="heider-basket-img">
             <p class="text-basket">Пусто</p>
           </li>
         </ul>
       </div>
-      <div class="heider-contact">
-        <p class="heider-time-table">С 10 до 20, ежедневно</p>
-        <p class="heider-phone">8 812 450-25-25</p>
-      </div>
-      </div>
     </header>
     <main class="container">
-      <!-- Пока не делаем, покажут на вебинаре как сделать слайдер -->
+      <div class="main-contact"> <!--Перенес сюда этот блок из heider-->
+        <p class="main-time-table">С 10 до 20, ежедневно</p>
+        <p class="main-phone">8 812 450-25-25</p>
+      </div>
+        <!-- Пока не делаем, покажут на вебинаре как сделать слайдер -->
       <div class="main-banner">
         <input type="radio" id="btn-1" name="toggle" checked>
         <input type="radio" id="btn-2" name="toggle">
@@ -108,99 +104,96 @@
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Шоколадное мороженое">
               <a href="#" class="slider-slides-link">текст_текст</a>
             </div>
-          </div>                        
+          </div>                    
         </div>
       </div>
-      <div class="container-promoaction">
-        <div class="container-promoaction-left"><!--Учтено--><!-- Лучше в классе использовать левый и правый, а не первый и второй, потмоу как блоков может быть больше 2-х -->
+      <div class="container-promoaction clearfix">
+        <div class="container-promoaction-block container-promoaction-left"><!--Учтено--><!-- Лучше в классе использовать левый и правый, а не первый и второй, потмоу как блоков может быть больше 2-х -->
           <h2 class="promoaction-title">Малинка даром!</h2><!--Учтено--><!-- Класс нужен -->
           <p class="promoaction-text">При покупке 2 кг любого фрутового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p><!--Учтено--><!-- Класс нужен -->
           <a href="#" class="promoaction-link">Хочу варенье!</a><!--Учтено--><!-- Класс нужен -->
         </div>
-        <div class="container-promoaction-right">
+        <div class="container-promoaction-block container-promoaction-right">
           <h2 class="promoaction-title">Шоколадки даром!</h2><!--Учтено--><!-- Класс нужен -->
           <p class="promoaction-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки абсолютно бесплатно.</p><!--Учтено--><!-- Класс нужен -->
           <a href="#" class="promoaction-link">Хочу шоколадки!</a><!--Учтено--><!-- Класс нужен -->
         </div>
       </div>
-      <div class="container-hit">
-        <article class="hit"><!--Учтено--><!-- Класс 1-hit, 2-hit и так далее не нужны -->
-          <div class="hit-image hit-image-1">
-            <img src="img/gllacy-index/container-hit-1.png" width="150" height="100" alt="Мороженое">
-            <span class="hit-name">ХИТ</span><!--Учтено--><!-- span-->
-          </div><!--Учтено--><!-- Добавить img и перенести сюда хит -->
-          <p class="hit-cost">310
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="container-goods">
+        <article class="goods"><!--Учтено--><!-- Класс 1-hit, 2-hit и так далее не нужны -->
+          <div class="goods-image">
+            <img src="img/gllacy-index/container-hit-1.png" width="200" height="200" alt="Мороженое">
+            <span class="goods-name"></span><!--Учтено--><!-- span-->
+            <p class="goods-cost">310
+            <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
           </p><!--Учтено--><!-- P - будет картинкой -->
-          <p>
+          </div><!--Учтено--><!-- Добавить img и перенести сюда хит -->
+          <p class="goods-text">
             <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a><!--Учтено--><!-- Обернуть ссылку в p -->
           </p>
         <!--Не понятно о какой кнопке идет речь, в макетах ее не вижу-->  <!-- Есть кнопка подробнее, видна при :hover -->
         </article>
-        <article class="hit">
-          <div class="hit-image hit-image-2">
-            <img src="img/gllacy-index/container-hit-2.png" width="150" height="100" alt="Мороженое">
-            <span class="hit-name">ХИТ</span>  
-          </div>
-          <p class="hit-cost">380
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+        <article class="goods">
+          <div class="goods-image">
+            <img src="img/gllacy-index/container-hit-2.png" width="200" height="200" alt="Мороженое">
+            <span class="goods-name"></span>
+            <p class="goods-cost">380
+            <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
           </p>
-          <p>
+          </div>
+          <p class="goods-text">
             <a href="#">Сливочно-кофейное с кусочками шоколада</a>
           </p>
         </article>
-        <article class="hit">
-          <div class="hit-image hit-image-3">
-            <img src="img/gllacy-index/container-hit-3.png" width="150" height="100" alt="Мороженое">
-            <span class="hit-name">ХИТ</span>  
+        <article class="goods">
+          <div class="goods-image">
+            <img src="img/gllacy-index/container-hit-3.png" width="200" height="200" alt="Мороженое">
+            <span class="goods-name"></span>
+            <p class="goods-cost">355
+            <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
+            </p>
           </div>
-          <p class="hit-cost">355
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
-          </p>
-          <p>
+          <p class="goods-text">
             <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           </p>
         </article>
-        <article class="hit">
-          <div class="hit-image hit-image-4">
-            <img src="img/gllacy-index/container-hit-4.png" width="150" height="100" alt="Мороженое">
-            <span class="hit-name">ХИТ</span>  
-          </div>
-          <p class="hit-cost">415
-            <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+        <article class="goods">
+          <div class="goods-image">
+            <img src="img/gllacy-index/container-hit-4.png" width="200" height="200" alt="Мороженое">
+            <span class="goods-name"></span>
+            <p class="goods-cost">415
+            <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
           </p>
-          <p>
+          </div>
+          <p class="goods-text">
             <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
           </p>
         </article>
       </div>
       <section class="features">
         <h3 class="features-title">Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-        <div class="features-block features-left"><!--Мы ведь получим 4 класса вместо 2х. Разве это удобно?--><!-- Можно не делить на левые и правые, можно их подряд сделать, но только последовательность будет по исконкам смотрим: мороженое, коровка, листик, градусник -->
+<!--Учтено--><!-- Можно не делить на левые и правые, можно их подряд сделать, но только последовательность будет по исконкам смотрим: мороженое, коровка, листик, градусник -->
           <div class="features-item">
-              <span class="features-icon"></span><!--Учтено--><!-- Не нужен img. Либо через псевдоэлемент, либо через span - а ему фоном повесим -->
+              <span class="features-icon features-icon-1"></span><!--Учтено--><!-- Не нужен img. Либо через псевдоэлемент, либо через span - а ему фоном повесим -->
             <p class="features-item-text">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
           </div>
           <div class="features-item">
-            <span class="features-icon"></span>
+            <span class="features-icon features-icon-2"></span>
             <p class="features-item-text">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные игредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
           </div>
-        </div>
-        <div class="features-block features-right">
           <div class="features-item">
-            <span class="features-icon"></span>
+            <span class="features-icon features-icon-3"></span>
             <p class="features-item-text">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
           </div>
           <div class="features-item">
-            <span class="features-icon"></span>
+            <span class="features-icon features-icon-4"></span>
             <p class="features-item-text">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
           </div>
-        </div>
       </section>
       <div class="container-blog-mail">
         <div class="container-blog">
           <p class="container-blog-title">Новое в нашем блоге</p>
-          <a href="#" class="container-blog-link">10 способов сервировки фруктовых щербетов<br> к столу</a>
+          <a href="#" class="container-blog-link">10 способов сервировки фруктовых щербетов к столу</a>
         </div>
         <section class="container-mailing">
           <p class="container-mailing-title">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды.Честно=)</p>
@@ -216,6 +209,7 @@
           <a href="#" class="map-link"></a>
         </div>
         <!--Учтено--><!-- Нужен будет центровщик -->
+        <span class="map-point"></span>
         <div class="container-center">
           <section class="container-contacts">
             <p>Адрес главного офиса и офлайн магазина:</p>
@@ -251,7 +245,7 @@
         </div>
       </section>
       <section class="footer-copyright">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+        <img src="/img/gllacy-icons/gllacy-footer-logoHTML.svg" width="108" height="37" alt="Логотип HTML Academy">
         <p>Сделано в
           <a href="http://htmlacademy.ru">HTML Academy</a>
           	&copy; 2016</p>
