--- a/gllacy-catalog.html
+++ b/gllacy-catalog.html
@@ -6,18 +6,17 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-heider"> <!--В отличии от страницы barbershop-item сделал логотип и меню в разных блоках, так как логотп существено крупней меню. Целесообразно это?-->
-      <div class="logo"><!--Учтено--><!-- Добавить класс .logo -->
+    <header class="main-heider clearfix">
+      <div class="heider-logo"><!--Учтено--><!-- Добавить класс .logo -->
       <a href="index.html">
-       <img src="img/gllacy-logo.svg" width="150" height="100" alt="Gllacy Shop">
+       <img src="img/gllacy-logo.svg" width="154" height="64" alt="Gllacy Shop">
       </a>
-      </div>
-      <div class="heider-container"> 
+      </div> 
         <nav class="heider-navigation">
           <ul class="top-ul"><!--Учтено--><!-- Лучше дать класс, чтобы потом не писать вложенных селекторов -->
             <li class="heider-catalog top-li-item">
               <a href="#" class="top-link">Каталог</a><!--Учтено--><!-- Лучше дать класс, чтобы потом не писать вложенных селекторов -->
-              <ul class="catalog-sub-menu">
+              <ul class="heider-sub-menu">
                 <li class="second-li-item"><!--Учтено--><!-- Лучше дать класс, чтобы потом не писать вложенных селекторов -->
                   <a href="#" class="second-link">Новинки</a>
                 </li>
@@ -44,8 +43,7 @@
             </li>
           </ul>
         </nav>
-      </div>
-      <div class="heider-right"><!--Учтено--><!-- Блок обертка для двух нижних блоков -->
+<!--Убрал обертку, так как перенес один из блоков в main.--><!-- Блок обертка для двух нижних блоков -->
         <div class="heider-user-block">
           <ul>
             <li class="heider-search">
@@ -113,14 +111,13 @@
             </li>
           </ul>
         </div>
-        <div class="heider-contact">
-          <p class="heider-time-table">С 10 до 20, ежедневно</p>
-          <p class="heider-phone">8 812 450-25-25</p>
-        </div>
-      </div>
-      <!--Учтено--><!-- Конец блока обертки -->
+      <!--Убрал обертку, так как перенес один из блоков в main.--><!-- Конец блока обертки -->
     </header>
-<main class="main-container">
+<main class="container">
+  <div class="main-contact">
+    <p class="main-time-table">С 10 до 20, ежедневно</p>
+    <p class="main-phone">8 812 450-25-25</p>
+  </div>
   <nav class="container-breadcrumbs">
     <ul>
       <li>
@@ -134,7 +131,7 @@
   </nav>
   <h1 class="main-title">Сливочное мороженое</h1><!--Учтено--><!-- Класс добавить -->
   <!--Учтено--><!-- этот класс даем форме, а сам div убираем -->
-    <form action="#" method="get" class="container-filter">
+    <form action="#" method="get" class="container-filter clearfix">
       <fieldset class="container-filter-select"><!--Учтено--><!-- fieldset -->
         <legend class="sorting-title">Сортировка:</legend><!--Учтено--><!-- legend -->
         <div class="sorting">
@@ -193,152 +190,152 @@
             <label for="jam">джемы</label>
           </div>
       </fieldset>
-      <input type="submit" value="Применить">
+      <input type="submit" value="Применить" class="filter-enter">
     </form>
   <div class="container-goods">
     <article class="goods"><!--Учтено--><!-- Класс 1-goods - не нужен -->
       <div class="goods-image">
-        <img src="http://placehold.it/150x100" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">310
-          <img src="img/gllacy-catalog/goods-1.png" width="150" height="100" alt="Символ рубля">/кг
+        <img src="img/gllacy-catalog/goods-1.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">310
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p><!--Учтено--><!-- Иконку рубля добавим картинкой. Этот блок должен лежать внутри блока с картинкой-->
       </div><!--Учтено--><!-- Внутрь вставить img. good-image-1 - не нужен класс -->
-        <p class="goods-name">
+        <p class="goods-text"> <!--text-->
           <a href="#" class="goods-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</a><!--Учтено-><!-- Ссыклка в ссылке не работает. Это должно быть две ссылки. Первая заключена в теге p -->
         </p>
-        <a href="#" class="blocked">Быстрый просмотр</a>
+        <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-2.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">380
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-2.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">380
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочно-кофейное с кусочками шоколада</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-3.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">355
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-3.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">355
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
       <a href="#" class="goods-link">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-4.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">415
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-4.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">415
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное крем-брюле с карамельной подливкой</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>  
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>  
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-5.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">325
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-5.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">325
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное с брусничным джемом</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>  
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>  
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-6.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">410
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-6.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">410
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочно-черничное с цельными ягодами черники</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-7.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">375
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-7.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">375
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text"> 
         <a href="#" class="goods-link">Сливочно-лимнное с карамельной присыпкой</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-8.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">320
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-8.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">320
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное с шоколадной стружкой</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-9.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">440
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-9.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">440
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочно-ванильное с кусочками шоколада</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-10.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">435
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-10.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">435
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное с ментоловым сиропом</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-11.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">355
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-11.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">355
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное с кусочками черного шоколада</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>  
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>  
     </article>
     <article class="goods">
-      <div class="good-image">
-        <img src="img/gllacy-catalog/goods-12.png" width="150" height="100" alt="Мороженое">
-        <p class="good-cost">420
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Символ рубля">/кг
+      <div class="goods-image">
+        <img src="img/gllacy-catalog/goods-12.png" width="200" height="200" alt="Мороженое">
+        <p class="goods-cost">420
+          <img src="http://placehold.it/150x100" width="10" height="10" alt="Символ рубля">/кг
         </p>
       </div>
-      <p class="goods-name">
+      <p class="goods-text">
         <a href="#" class="goods-link">Сливочное с мятным сиропом</a>
       </p>
-      <a href="#" class="blocked">Быстрый просмотр</a>
+      <a href="#" class="goods-blocked">Быстрый просмотр</a>
     </article>
   </div>
   <!--Учтено--><!-- Этот класс назначить для ul, а сам div - лишний -->
@@ -385,7 +382,7 @@
   </section>
   <section class="footer-copyright">
     <!-- Картинку оберни в ссылку -->
-    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+    <img src="/img/gllacy-icons/gllacy-footer-logoHTML.svg" width="108" height="37" alt="Логотип HTML Academy">
     <p>Сделано в
       <a href="http://htmlacademy.ru">HTML Academy</a><!--Учтено--><!-- Адрес надо указывать с http:// или https:// -->
       	&copy; 2016</p>
